--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=Two-tier-Crud
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdbcicd?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Manoj@1812
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
